[package]
name = "fqview"
version = "0.1.0"
edition = "2024"

[dependencies]
fltk = { version = "^1.5", features = ["enable-glwindow"] }
speedy2d = { version = "2.1.0", default-features = false }
image = "0.25.6"
archive-reader = "0.4.2"
zip = "4.6.1"
libheif-rs = "2.3.0"
fltk-theme = "0.7.9"
human_bytes = "0.4.3"